# peripherio

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  example.cpp  i2c.hpp  mpu6050.hpp  pca9685.hpp
.circleci/: config.yml
examples/categories/gyro/: category.yml
examples/category/accelerometer/: category.yml
examples/category/thermometer/: category.yml
examples/client/: client.rs
examples/driver/adxl345/: Makefile
examples/driver/mpu6050/: .gitignore  Makefile  driver.yml  mpu6050.c  rami.yml
examples/drivers/adxl345/: Makefile  adxl345.c  driver.yml
examples/drivers/mpu6050/: .gitignore  Makefile
examples/lib/: load_library.rs
protos/: .gitignore  peripherio.proto
pyperipherio/: Pipfile  setup.py
pyperipherio/examples/: simple_get_gyro.py
pyperipherio/peripherio/: __init__.py
pyrami/: Pipfile  rami.py  setup.py
pyrami/examples/: simple_get_gyro.py
pyrami/rami/: __init__.py
src/: category.rs  codegen.rs  config.rs  error.rs  lib.rs  main.rs  resolve.rs  util.rs
src/config/: global.rs  mod.rs
src/device/: category.rs  device.rs  device_manager.rs  driver.rs  driver_manager.rs  driver_spec.rs  io.rs  loader.rs  mod.rs
src/driver/: driver.rs  driver_manager.rs  driver_spec.rs  mod.rs
src/protos/: main.proto  mod.rs
src/subcommand/: device.rs  driver.rs  mod.rs  util.rs
