[package]
name = "rami"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
build = "build.rs"

[[example]]
name = "client"
path = "examples/client/client.rs"

[[example]]
name = "load_library"
path = "examples/lib/load_library.rs"

[dependencies]
futures = "0.1.23"
protobuf = "2.0.4"
libloading = "0.5.0"
failure = "0.1.2"
valico = "2.1.0"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_yaml = "0.7"
serde_json = "1.0"
grpcio = "0.3"

[build-dependencies]
protoc-grpcio = "0.2.0"
