[package]
name = "peripherio"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"

[[example]]
name = "client"
path = "examples/client/client.rs"

[[example]]
name = "load_library"
path = "examples/lib/load_library.rs"

[dependencies]
futures = "0.1.23"
protobuf = "2.0.4"
libloading = "0.5.0"
failure = "0.1.2"
valico = "2.1.0"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_yaml = "0.7"
serde_json = "1.0"
rmp-serde = "0.13.7"
linked-hash-map = { version = "0.5.1", features = ["serde_impl"] }
lazy_static = "1.1.0"
grpcio = "0.3"
rand = "0.5.5"
daemonize = "0.3.0"

[build-dependencies]
protoc-grpcio = "0.2.0"
